[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-okf"
version = "0.3.2"
description = "Universal OKF-based memory system for Hermes agent — structured, persistent, agent-readable knowledge storage."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "EliaszDev", email = "eliasz@example.com" },
]
keywords = [
    "hermes",
    "okf",
    "open-knowledge-format",
    "agent-memory",
    "knowledge-graph",
    "ai-agent",
    "memory-system",
    "markdown",
    "knowledge-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
rag = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-openai>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
all = [
    "hermes-okf[rag,dev]",
]

[project.scripts]
hermes-okf = "hermes_okf.cli:main"

[project.entry-points."hermes.memory_providers"]
hermes-okf = "hermes_okf.memory_plugin:HermesOKFMemoryProvider"

[project.entry-points."hermes_agent.plugins"]
hermes-okf = "hermes_okf.plugin:register"

[project.urls]
Homepage = "https://github.com/EliaszDev/hermes-okf"
Documentation = "https://github.com/EliaszDev/hermes-okf#readme"
Repository = "https://github.com/EliaszDev/hermes-okf"
Issues = "https://github.com/EliaszDev/hermes-okf/issues"
Changelog = "https://github.com/EliaszDev/hermes-okf/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_okf"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=hermes_okf --cov-report=term-missing --cov-report=xml"
